[package]
name = "mprovision"
version = "6.5.0"
authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]
edition = "2021"
autobins = false

[[bin]]
path = "src/bin/main.rs"
name = "mprovision"
doc = false
test = true

[dependencies]
plist = "1.3"
time = { version = "0.3.11", features = ["formatting", "macros"] }
memmem = "0.1"
clap = { version = "3", features = ["derive"] }
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5"
main_error = "0.1"
colored = "2"

[dev-dependencies]
expectest = "0.12"
tempfile = "3.3.0"

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
lto = true
