[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]
edition = "2021"
repository = "https://github.com/zummenix/mprovision"
license = "MIT"
keywords = ["ios", "provisioning-profile", "mobileprovision"]

[workspace.dependencies]
time = { version = "0.3", features = ["formatting", "macros"] }

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
lto = true
