[package]
name = "mprovision"
version = "0.1.1"
description = "Set of types and functions to manage iOS provisioning profiles"
categories = ["development-tools", "filesystem"]
keywords.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
time.workspace = true
plist = "1.5"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.7"
memchr = "2.6.3"

[dev-dependencies]
tempfile = "3.8"
