[package]
name = "mprovision"
version = "0.1.1"
description = "Set of types and functions to manage iOS provisioning profiles"
categories = ["development-tools", "filesystem"]
keywords.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
time.workspace = true
plist = "1.6"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"
memchr = "2.7.4"

[dev-dependencies]
tempfile = "3.10"
