[package]
name = "mprovision"
version = "0.1.1"
description = "Set of types and functions to manage iOS provisioning profiles"
categories = ["development-tools", "filesystem"]
keywords.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
include = ["src/**/*", "README.md"]

[dependencies]
time.workspace = true
plist = "1.8"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.11"
memchr = "2.8.0"

[dev-dependencies]
tempfile = "3.25"
